# multi_hive

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: post-commit  pre-commit
docs/: ARCHITECTURE.md  LOOP_ENGINEERING.md
examples/: wrap_text.md
legacy/flat/: agent_router_node.py  async_editor_node.py  editor_node.py  hive_config.py  hive_memory.py  hive_orchestrator.py  hive_prompts.py  hive_state.py  hive_utils.py  human_gate_node.py  llm_factory.py  loop_audit.py  metrics.py  retrospector_node.py  reviewer_node.py  run_hive.py  run_hive_async.py  semantic_reviewer_node.py  sprint_planner.py  ticket_writer.py
legacy/mnt_nodes/: agent_router_node.py  retrospector_node.py  reviewer_node.py  sprint_planner.py
scripts/: bench.py  bench_models.py  deep_baseline.ps1  release.py
src/multi_hive/: __init__.py  __main__.py  cli.py  config.py  contract.py  discovery.py  orchestrator.py  prompts.py  state.py  supervisor.py
src/multi_hive/bench/: __init__.py  contracts.py  history.py  runner.py  suite.py
src/multi_hive/core/: __init__.py  ast_utils.py  console.py  governor.py  journal.py  llm_factory.py  loop_audit.py  memory.py  metrics.py  model_router.py  platform.py  utils.py
src/multi_hive/nodes/execution/: __init__.py  agent_router_node.py  async_editor_node.py  human_gate_node.py  retrospector_node.py  reviewer_node.py  semantic_reviewer_node.py  spec_writer_node.py  sprint_planner.py  ticket_writer.py
tests/: conftest.py  test_acceptance_spec.py  test_ast_utils.py  test_bench_history.py  test_bench_oneshot.py  test_contract.py  test_discovery.py  test_governor.py  test_graph.py  test_journal.py  test_llm_factory.py  test_loop_terminates.py  test_model_router.py  test_platform.py  test_safe_path.py  test_sandbox_limits.py  test_sprint_stream.py  test_stdin_broker.py  test_supervisor.py  test_ticket_writer.py  test_workspace_isolation.py
