[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-hive"
version = "4.2.0"
description = "Sentinel Prime — an async, self-healing, multi-file code generation hive on LangGraph + Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
multi-hive = "multi_hive.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_hive"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
