[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-hive"
version = "4.8.0"
description = "Sentinel Prime — an async, self-healing, multi-file code generation hive on LangGraph + Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
# HIVE_PROVIDER=anthropic. Optional: the default provider is local Ollama, and an
# offline user should not be made to install an API client they never asked for.
anthropic = [
    "langchain-anthropic>=0.3",
]

[project.scripts]
multi-hive = "multi_hive.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_hive"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes — the ones that are real bugs
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
]
ignore = [
    "E501",  # line length is handled by the formatter, not the linter
]
